fixed image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@
 
 .image-container {
     background: transparent;
-    height: 120vw;
+    height: 100vw;
 }
 
 .content-header {
